@@ -37,11 +37,14 @@ BR2_arm=y
 # BR2_cortex_a5 is not set
 # BR2_cortex_a8 is not set
 BR2_cortex_m3=y
+# BR2_cortex_m4f is not set
 # BR2_cortex_m0 is not set
 # BR2_sa110 is not set
 # BR2_sa1100 is not set
 # BR2_xscale is not set
 # BR2_iwmmxt is not set
+BR2_GCC_CORTEX=y
+# BR2_GCC_CORTEX_M4F is not set
 # BR2_ARM_OABI is not set
 BR2_ARM_EABI=y
 BR2_ARCH="arm"
@@ -80,6 +83,7 @@ BR2_GNU_TARGET_SUFFIX="nuttx-eabi"
 # BR2_BINUTILS_VERSION_2_19_1 is not set
 # BR2_BINUTILS_VERSION_2_21_1 is not set
 BR2_BINUTILS_VERSION_2_22=y
+# BR2_BINUTILS_VERSION_2_24 is not set
 BR2_BINUTILS_VERSION="2.22"
 BR2_EXTRA_BINUTILS_CONFIG_OPTIONS=""
 
@@ -93,6 +97,8 @@ BR2_PACKAGE_GCC=y
 # BR2_GCC_VERSION_4_3_3 is not set
 # BR2_GCC_VERSION_4_5_2 is not set
 BR2_GCC_VERSION_4_6_3=y
+# BR2_GCC_VERSION_4_7_3 is not set
+# BR2_GCC_VERSION_4_8_2 is not set
 BR2_GCC_SUPPORTS_SYSROOT=y
 BR2_GCC_VERSION="4.6.3"
 # BR2_GCC_USE_SJLJ_EXCEPTIONS is not set
