@@ -77,6 +77,7 @@
 #include <sys/types.h>
 #include <netinet/in.h>
 
+#include "config.h"
 #include "bfd.h"
 #include "arch/arch.h"
 #include "nxflat.h"
