@@ -147,4 +147,6 @@ buildroot-1.14 2011-xx-xx <gnutt@nuttx.org>
 	* Support for the Cortex-M4F (with hardware floating point).  Also from
 	  David Alessio (2014-2-18).
 	* Added a Cortex-M3 GCC 4.8.2 EABI configuration (2014-2-27).
+	* toolchain/nxflat/ldnxflat.c and mknxflat.c:  Fix error with binutils-2.4:
+	  bfd.h wants us to include config.h first (2014-2.27).
 
